--- a/recommend.ipynb
+++ b/recommend.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "bdabb92d-a2ec-4da6-85e8-0af2483fbb58",
    "metadata": {},
    "outputs": [
@@ -255,21 +255,21 @@
       "--------------------------------\n",
       "Top movie recommendations\n",
       "--------------------------------\n",
-      "Imago mortis (2009) : Horror\n",
-      "Dead Sleep (1992) : (no genres listed)\n",
-      "Mortem (2012) : (no genres listed)\n",
-      "A Simple Death (1985) : (no genres listed)\n",
-      "La madre muerta (1993) : Drama\n",
-      "After Death (1989) : Horror\n",
-      "Death and Transfiguration (1983) : Drama\n",
+      "Tut (2015) : (no genres listed)\n",
+      "Fant : (no genres listed)\n",
+      "Thithi (2015) : (no genres listed)\n",
+      "Tibetana : (no genres listed)\n",
+      "Оно (1990) : (no genres listed)\n",
+      "The OA : (no genres listed)\n",
+      "Zero : (no genres listed)\n",
+      "Since : (no genres listed)\n",
       "The Body : (no genres listed)\n",
-      "Dead Man Out (1989) : (no genres listed)\n",
-      "Dad's Dead (2002) : (no genres listed)\n"
+      "Twice : (no genres listed)\n"
      ]
     }
    ],
    "source": [
-    "personalisedRecommender.print_recs(4232, \"death\")"
+    "personalisedRecommender.print_recs(4232, \"toto\")"
    ]
   },
   {
